--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <![endif]-->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
-    <script src="javascript/map.js"></script>
+    <script src="javascripts/map.js"></script>
     <title>Pelji.me by mitjajez</title>
   </head>
 
