--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-    <link rel="stylesheet" type="text/css" href="stylesheets/map.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/map.css?v1">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -34,10 +34,8 @@
         <hr>
 
         <section id="main_content">
-          <h3>
             <div id="mapid"></div>
             <script src="https://raw.githubusercontent.com/mitjajez/pelji.me/master/map.js?v1"></script>
-
         </section>
 
         <footer>
