--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-    <link rel="stylesheet" type="text/css" href="stylesheets/map.css?v1">
+    <link rel="stylesheet" type="text/css" href="stylesheets/map.css?v=1">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -35,7 +35,7 @@
 
         <section id="main_content">
             <div id="mapid"></div>
-            <script src="https://raw.githubusercontent.com/mitjajez/pelji.me/master/map.js?v1"></script>
+            <script src="//raw.githubusercontent.com/mitjajez/pelji.me/master/map.js?v=1"></script>
         </section>
 
         <footer>
