--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <section id="main_content">
             <div id="mapid"></div>
-            <script src="//raw.githubusercontent.com/mitjajez/pelji.me/master/map.js"></script>
+            <script type="text/javascript" src="//raw.githubusercontent.com/mitjajez/pelji.me/master/map.js"></script>
         </section>
 
         <footer>
